Added file with comments

--- a/Recommendation_System_using_Neural_MF.ipynb
+++ b/Recommendation_System_using_Neural_MF.ipynb
@@ -46,17 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-12-19T07:15:01.033270Z",
-     "iopub.status.busy": "2024-12-19T07:15:01.033055Z",
-     "iopub.status.idle": "2024-12-19T07:15:05.636853Z",
-     "shell.execute_reply": "2024-12-19T07:15:05.636029Z",
-     "shell.execute_reply.started": "2024-12-19T07:15:01.033249Z"
-    },
-    "trusted": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
@@ -104,7 +95,7 @@
     "print(device)\n",
     "\n",
     "def read_data():\n",
-    "    df = pd.read_csv('Dataset\\values.csv') \n",
+    "    df = pd.read_csv('/kaggle/input/data-dys/values.csv') \n",
     "    df = df.stack().rename_axis(('User', 'Item')).reset_index(name='Score')\n",
     "    item_labels, item_original = pd.factorize(df['Item'])\n",
     "    df['Item'] = item_labels\n",
